@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2005, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,7 +27,6 @@ package sun.util.locale.provider;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.IllformedLocaleException;
 import java.util.List;
@@ -38,6 +37,7 @@ import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.spi.LocaleServiceProvider;
+import java.util.stream.Stream;
 
 /**
  * An instance of this class holds a set of the third party implementations of a particular
@@ -49,7 +49,7 @@ import java.util.spi.LocaleServiceProvider;
 public final class LocaleServiceProviderPool {
 
     /**
-     * A Map that holds singleton instances of this class.  Each instance holds a
+     * A Map that holds singleton instances of this class. Each instance holds a
      * set of provider implementations of a particular locale sensitive service.
      */
     private static final ConcurrentMap<Class<? extends LocaleServiceProvider>, LocaleServiceProviderPool> poolOfPools =
@@ -62,7 +62,7 @@ public final class LocaleServiceProviderPool {
         new ConcurrentHashMap<>();
 
     /**
-     * Available locales for this locale sensitive service.  This also contains
+     * Available locales for this locale sensitive service. This also contains
      * JRE's available locales
      */
     private Set<Locale> availableLocales = null;
@@ -138,7 +138,6 @@ public final class LocaleServiceProviderPool {
                     LocaleServiceProviderPool.getPool(c);
                 all.addAll(pool.getAvailableLocaleSet());
             }
-
             allAvailableLocales = all.toArray(new Locale[0]);
         }
 
@@ -148,22 +147,31 @@ public final class LocaleServiceProviderPool {
     }
 
     /**
-     * Returns an array of available locales for all the provider classes.
+     * {@return a stream of the available locales for all the provider classes}
+     *
+     * This stream is constructed from all the locales that are provided by each
+     * provider, including the JRE.
+     */
+    public static Stream<Locale> streamAllAvailableLocales() {
+        return Arrays.stream(AllAvailableLocales.allAvailableLocales);
+    }
+
+    /**
+     * {@return an array of the available locales for all the provider classes}
+     *
      * This array is a merged array of all the locales that are provided by each
      * provider, including the JRE.
-     *
-     * @return an array of the available locales for all provider classes
      */
     public static Locale[] getAllAvailableLocales() {
         return AllAvailableLocales.allAvailableLocales.clone();
     }
 
     /**
-     * Returns an array of available locales.  This array is a
+     * {@return an array of the available locales}
+     *
+     * This array is a
      * merged array of all the locales that are provided by each
      * provider, including the JRE.
-     *
-     * @return an array of the available locales
      */
     public Locale[] getAvailableLocales() {
         Set<Locale> locList = new HashSet<>();
@@ -379,8 +387,7 @@ public final class LocaleServiceProviderPool {
      * A dummy locale service provider list that indicates there is no
      * provider available
      */
-    private static final List<LocaleServiceProvider> NULL_LIST =
-        Collections.emptyList();
+    private static final List<LocaleServiceProvider> NULL_LIST = List.of();
 
     /**
      * An interface to get a localized object for each locale sensitive
