@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -55,10 +55,9 @@
  *     For more information see bugs #5041847, #4980307 and J2SE 5.0+ JVMTI spec.
  * COMMENTS
  *
- * @requires vm.continuations
  * @library /test/lib
- * @compile --enable-preview -source ${jdk.version} thrstat05.java
- * @run main/othervm/native --enable-preview -agentlib:thrstat05 thrstat05
+ * @compile thrstat05.java
+ * @run main/othervm/native -agentlib:thrstat05 thrstat05
  */
 
 
