@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 4916852
  * @summary Tests Component encoding (background, foreground and font)
- * @run main/othervm -Djava.security.manager=allow java_awt_Component
+ * @run main/othervm java_awt_Component
  * @author Sergey Malenkov
  */
 
@@ -35,7 +35,7 @@ import java.awt.Font;
 
 public final class java_awt_Component extends AbstractTest<Component> {
     public static void main(String[] args) {
-        new java_awt_Component().test(true);
+        new java_awt_Component().test();
     }
 
     @Override
