@@ -26,19 +26,20 @@
  * @summary Test virtual thread park when scheduler is a fixed thread pool
  * @requires vm.continuations
  * @modules java.base/java.lang:+open
- * @compile --enable-preview -source ${jdk.version} ParkWithFixedThreadPool.java
- * @run testng/othervm --enable-preview ParkWithFixedThreadPool
+ * @library /test/lib
+ * @run main ParkWithFixedThreadPool
  */
-import java.util.concurrent.*;
-import java.util.concurrent.atomic.*;
+
+import java.util.concurrent.Executor;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ThreadFactory;
 import java.util.concurrent.locks.LockSupport;
-import static org.testng.Assert.*;
-import org.testng.annotations.Test;
+import jdk.test.lib.thread.VThreadScheduler;
 
 public class ParkWithFixedThreadPool {
-    @Test
-    public static void multipleThreadPoolParkTest() throws Exception {
-        try (ExecutorService scheduler = Executors.newFixedThreadPool(8)) {
+    public static void main(String[] args) throws Exception {
+        try (var scheduler = new Scheduler(8)) {
             int vthreadCount = 300;
             Thread[] vthreads = new Thread[vthreadCount];
             Runnable target = new Runnable() {
@@ -61,9 +62,7 @@ public class ParkWithFixedThreadPool {
                 }
             };
 
-            ThreadFactory factory = ThreadBuilders.virtualThreadBuilder(scheduler)
-                    .name("vthread-", 0)
-                    .factory();
+            ThreadFactory factory = VThreadScheduler.virtualThreadFactory(scheduler);
 
             for (int i = 0; i < vthreadCount; i++) {
                 vthreads[i] = factory.newThread(target);
@@ -75,6 +74,29 @@ public class ParkWithFixedThreadPool {
             for (int i = 0; i < vthreadCount; i++) {
                 vthreads[i].join();
             }
+        }
+    }
+
+    static class Scheduler implements Executor, AutoCloseable {
+        private final ExecutorService pool;
+
+        Scheduler(int poolSize) {
+            pool = Executors.newFixedThreadPool(poolSize);
+        }
+
+        @Override
+        public void execute(Runnable task) {
+            try {
+                pool.execute(task);
+            } finally {
+                // ExecutorService::execute may consume parking permit
+                LockSupport.unpark(Thread.currentThread());
+            }
+        }
+
+        @Override
+        public void close() {
+            pool.close();
         }
     }
 }
