@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,12 +30,7 @@
  *      indify.Indify
  *      --verify-specifier-count=8
  *      --expand-properties --classpath ${test.classes}
- *      --java test.java.lang.invoke.InvokeDynamicPrintArgs --check-output
- * @run main/othervm
- *      -Djava.security.manager=allow
- *      indify.Indify
- *      --expand-properties --classpath ${test.classes}
- *      --java test.java.lang.invoke.InvokeDynamicPrintArgs --security-manager
+ *      --java test.java.lang.invoke.InvokeDynamicPrintArgs
  */
 
 package test.java.lang.invoke;
@@ -44,14 +39,12 @@ import java.util.*;
 import java.io.*;
 
 import java.lang.invoke.*;
-import java.security.*;
 import static java.lang.invoke.MethodHandles.*;
 import static java.lang.invoke.MethodType.*;
 
 public class InvokeDynamicPrintArgs {
     public static void main(String... av) throws Throwable {
-        if (av.length > 0 && av[0].equals("--check-output"))  openBuf();
-        if (av.length > 0 && av[0].equals("--security-manager"))  setSM();
+        openBuf();
         System.out.println("Printing some argument lists, starting with a empty one:");
         INDY_nothing().invokeExact();                 // BSM specifier #0 = {bsm}
         INDY_bar().invokeExact("bar arg", 1);         // BSM specifier #1 = {bsm2, Void.class, "void type"}
@@ -73,11 +66,6 @@ public class InvokeDynamicPrintArgs {
     private static void assertEquals(Object exp, Object act) {
         if (exp == act || (exp != null && exp.equals(act)))  return;
         throw new AssertionError("not equal: "+exp+", "+act);
-    }
-
-    private static void setSM() {
-        Policy.setPolicy(new TestPolicy());
-        System.setSecurityManager(new SecurityManager());
     }
 
     private static PrintStream oldOut;
@@ -232,25 +220,5 @@ public class InvokeDynamicPrintArgs {
         // if this gets called, the transformation has not taken place
         if (System.getProperty("InvokeDynamicPrintArgs.allow-untransformed") != null)  return;
         throw new AssertionError("this code should be statically transformed away by Indify");
-    }
-
-    static class TestPolicy extends Policy {
-        static final Policy DEFAULT_POLICY = Policy.getPolicy();
-
-        final PermissionCollection permissions = new Permissions();
-        TestPolicy() {
-            permissions.add(new java.io.FilePermission("<<ALL FILES>>", "read"));
-        }
-        public PermissionCollection getPermissions(ProtectionDomain domain) {
-            return permissions;
-        }
-
-        public PermissionCollection getPermissions(CodeSource codesource) {
-            return permissions;
-        }
-
-        public boolean implies(ProtectionDomain domain, Permission perm) {
-            return permissions.implies(perm) || DEFAULT_POLICY.implies(domain, perm);
-        }
     }
 }
