@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @bug 4673940 4930794 8211842
+ * @bug 4673940 4930794 8211842 6914801
  * @summary Unit tests for inetd feature
  * @requires (os.family == "linux" | os.family == "mac")
  * @library /test/lib
@@ -35,6 +35,7 @@
  *        jdk.test.lib.process.*
  *        UnixSocketTest StateTest StateTestService EchoTest EchoService
  *        UnixDomainChannelTest CloseTest Launcher Util
+ *        CheckIPv6Test CheckIPv6Service
  * @run testng/othervm/native InheritedChannelTest
  * @key intermittent
  */
@@ -58,16 +59,8 @@ import static java.util.Arrays.asList;
 
 public class InheritedChannelTest {
 
-    private static final String TEST_SRC = System.getProperty("test.src");
     private static final String TEST_CLASSPATH = System.getProperty("test.class.path");
     private static final String TEST_CLASSES = System.getProperty("test.classes");
-    private static final Path POLICY_PASS = Paths.get(TEST_SRC, "java.policy.pass");
-    private static final Path POLICY_FAIL = Paths.get(TEST_SRC, "java.policy.fail");
-
-    private static final String OS_NAME = System.getProperty("os.name").toLowerCase();
-
-    private static final String ARCH = System.getProperty("os.arch");
-    private static final String OS_ARCH = ARCH.equals("i386") ? "i586" : ARCH;
 
     private static final Path libraryPath
             = Paths.get(System.getProperty("java.library.path"));
@@ -79,26 +72,8 @@ public class InheritedChannelTest {
             { "UnixSocketTest", List.of(UnixSocketTest.class.getName())},
             { "StateTest", List.of(StateTest.class.getName(), "-Dtest.classes="+TEST_CLASSES)},
             { "EchoTest",  List.of(EchoTest.class.getName())  },
+            { "CheckIPv6Test",  List.of(CheckIPv6Test.class.getName())  },
             { "CloseTest", List.of(CloseTest.class.getName()) },
-
-            // run StateTest with a SecurityManager set
-            // Note that the system properties are arguments to StateTest and not options.
-            // These system properties are passed to the launched service as options:
-            // java [-options] class [args...]
-
-            { "StateTest run with " + POLICY_PASS, List.of(StateTest.class.getName(),
-                                                           "-Djava.security.manager",
-                                                           "-Dtest.classes=" + TEST_CLASSES,
-                                                           "-Djava.security.policy="
-                                                           + POLICY_PASS)
-            },
-            { "StateTest run with " + POLICY_FAIL, List.of(StateTest.class.getName(),
-                                                           "-expectFail",
-                                                           "-Djava.security.manager",
-                                                           "-Dtest.classes=" + TEST_CLASSES,
-                                                           "-Djava.security.policy="
-                                                           + POLICY_FAIL)
-            }
         };
     }
 
