@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,28 +23,32 @@
 
 /*
  * @test
- * @bug 4018937 8008577
+ * @bug 4018937 8008577 8174269 8333755
  * @summary Confirm that methods which are newly added to support BigDecimal and BigInteger work as expected.
- * @library /java/text/testlib
- * @run main/othervm -Djava.locale.providers=COMPAT,SPI BigDecimalParse
+ * @run junit/othervm BigDecimalParse
  */
 
 import java.math.BigDecimal;
-import java.text.*;
-import java.util.*;
+import java.text.DecimalFormat;
+import java.text.Format;
+import java.text.MessageFormat;
+import java.text.NumberFormat;
+import java.text.ParsePosition;
+import java.util.Locale;
 
-public class BigDecimalParse extends IntlTest {
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeAll;
 
-    public static void main(String[] args) throws Exception {
-        Locale loc = Locale.getDefault();
-        try {
-            Locale.setDefault(Locale.US);
-            new BigDecimalParse().run(args);
-        } finally {
-            // restore the reserved locale
-            Locale.setDefault(loc);
-        }
+import static org.junit.jupiter.api.Assertions.fail;
+
+public class BigDecimalParse {
+
+    // Change JVM default Locale
+    @BeforeAll
+    static void initAll() {
+        Locale.setDefault(Locale.forLanguageTag("en-US-u-cf-account"));
     }
+
 
     static final String nonsep_int =
         "123456789012345678901234567890123456789012345678901234567890" +
@@ -108,7 +112,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for normal big numbers which have the fraction part
      */
-    void test_Parse_in_DecimalFormat_BigDecimal() {
+    @Test
+    public void test_Parse_in_DecimalFormat_BigDecimal() {
         df = new DecimalFormat();
         df.setParseBigDecimal(true);
 
@@ -150,7 +155,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for normal big numbers which have the fraction part with multiplier
      */
-    void test_Parse_in_DecimalFormat_BigDecimal_usingMultiplier() {
+    @Test
+    public void test_Parse_in_DecimalFormat_BigDecimal_usingMultiplier() {
         df = new DecimalFormat();
         df.setParseBigDecimal(true);
 
@@ -192,7 +198,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for division by zero (BigDecimal)
      */
-    void test_Parse_in_DecimalFormat_BigDecimal_DivisionByZero() {
+    @Test
+    public void test_Parse_in_DecimalFormat_BigDecimal_DivisionByZero() {
         df = new DecimalFormat();
         df.setParseBigDecimal(true);
         df.setMultiplier(0);
@@ -213,7 +220,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for division by zero (Double)
      */
-    void test_Parse_in_DecimalFormat_Double_DivisionByZero() {
+    @Test
+    public void test_Parse_in_DecimalFormat_Double_DivisionByZero() {
         df = new DecimalFormat();
         df.setParseBigDecimal(false);
         df.setMultiplier(0);
@@ -236,7 +244,7 @@ public class BigDecimalParse extends IntlTest {
 
         // From: Double.NaN
         // To:   Double.NaN
-        check("\ufffd", Double.NaN);
+        check("NaN", Double.NaN);
 
         // From: Double.POSITIVE_INFINITY
         // To:   Double.NaN
@@ -250,7 +258,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for division by zero (Long)
      */
-    void test_Parse_in_DecimalFormat_Long_DivisionByZero() {
+    @Test
+    public void test_Parse_in_DecimalFormat_Long_DivisionByZero() {
         df = new DecimalFormat();
         df.setParseBigDecimal(false);
         df.setMultiplier(0);
@@ -271,7 +280,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for normal big numbers which don't have the fraction part
      */
-    void test_Parse_in_DecimalFormat_BigInteger() {
+    @Test
+    public void test_Parse_in_DecimalFormat_BigInteger() {
         df = new DecimalFormat();
         df.setParseBigDecimal(true);
 
@@ -296,7 +306,8 @@ public class BigDecimalParse extends IntlTest {
      * Test for normal big numbers which don't have the fraction part with
      * multiplier
      */
-    void test_Parse_in_DecimalFormat_BigInteger_usingMultiplier() {
+    @Test
+    public void test_Parse_in_DecimalFormat_BigInteger_usingMultiplier() {
         df = new DecimalFormat();
         df.setParseBigDecimal(true);
 
@@ -337,12 +348,13 @@ public class BigDecimalParse extends IntlTest {
      *    Double.POSITIVE_INFINITY
      *    Double.NEGATIVE_INFINITY
      */
-    void test_Parse_in_DecimalFormat_SpecialNumber() {
+    @Test
+    public void test_Parse_in_DecimalFormat_SpecialNumber() {
         df = new DecimalFormat();
         df.setParseBigDecimal(true);
 
         String[] numbers = {
-            "0", "0.0", "25", "25.0", "25.5", "\u221e", "\ufffd",
+            "0", "0.0", "25", "25.0", "25.5", "\u221e", "NaN",
             "-0", "-0.0", "-25", "-25.0", "-25.5", "-\u221e",
         };
         int multipliers[] = {5, -5};
@@ -378,7 +390,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for special numbers
      */
-    void test_Parse_in_DecimalFormat_Other() {
+    @Test
+    public void test_Parse_in_DecimalFormat_Other() {
         df = new DecimalFormat();
         df.setParseBigDecimal(true);
 
@@ -472,7 +485,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for MessageFormat: setParseIntegerOnly(false)
      */
-    void test_Parse_in_MessageFormat_NotParseIntegerOnly() {
+    @Test
+    public void test_Parse_in_MessageFormat_NotParseIntegerOnly() {
         for (int i=0; i < patterns.length; i++) {
             pp = new ParsePosition(0);
             Object[] parsed = null;
@@ -487,19 +501,19 @@ public class BigDecimalParse extends IntlTest {
                 parsed = mf.parse(from[i], pp);
 
                 if (pp.getErrorIndex() != -1) {
-                    errln("Case" + (i+1) +
+                    fail("Case" + (i+1) +
                           ": getErrorIndex() returns wrong value. expected:-1, got:"+
                           pp.getErrorIndex() + " for " + from[i]);
                 }
                 if (pp.getIndex() != parsePosition1[i]) {
-                    errln("Case" + (i+1) +
+                    fail("Case" + (i+1) +
                           ": getIndex() returns wrong value. expected:" +
                           parsePosition1[i] + ", got:"+ pp.getIndex() +
                           " for " + from[i]);
                 }
             }
             catch(Exception e) {
-                errln("Unexpected exception: " + e.getMessage());
+                fail("Unexpected exception: " + e.getMessage());
             }
 
             checkType(from[i], getType(new BigDecimal(expected1[i])),
@@ -533,23 +547,23 @@ public class BigDecimalParse extends IntlTest {
     static final int[][] parsePosition2 = {     // {errorIndex, index}
         /*
          * Should keep in mind that the expected result is different from
-         * DecimalFormat.parse() for some cases.
+         * DecimalFormat.parse() for some cases. This is because parsing integer
+         * only will return a successful parse for the subformat, but since the index
+         * returned is not equal to the length, at the MessageFormat level, this
+         * will be interpreted as a failed parse, and so the DecimalFormat index
+         * should be reflected as the MessageFormat errorIndex.
          */
         {28, 0},        // parsing stopped at '.'
         {29, 0},        // parsing stopped at '.'
         {29, 0},        // parsing stopped at '.'
-        {2, 0},         // parsing stopped at '(' because cannot find ')'
-        {2, 0},         // parsing stopped at the first numeric
-                        // because cannot find '%'
-        {2, 0},         // parsing stopped at the first numeric
-                        // because cannot find '%'
+        {30, 0},        // parsing stopped at '.'
+        {31, 0},        // parsing stopped at '.'
+        {32, 0},        // parsing stopped at '.'
         {28, 0},        // parsing stopped at '.'
         {29, 0},        // parsing stopped at '.'
-
         {-1, 57}, {-1, 58}, {-1, 59}, {-1, 61},
         {56, 0},        // parsing stopped at '.'
-                        // because cannot find '%'
-        {2, 0},         // parsing stopped at '(' because cannot find ')'
+        {57, 0},        // parsing stopped at '.'
         {-1, 60}, {-1, 61},
         {28, 0},        // parsing stopped at '.'
         {-1, 88},
@@ -558,7 +572,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for MessageFormat: setParseIntegerOnly(true)
      */
-    void test_Parse_in_MessageFormat_ParseIntegerOnly() {
+    @Test
+    public void test_Parse_in_MessageFormat_ParseIntegerOnly() {
         for (int i=0; i < patterns.length; i++) {
             pp = new ParsePosition(0);
             Object[] parsed = null;
@@ -574,20 +589,20 @@ public class BigDecimalParse extends IntlTest {
                 parsed = mf.parse(from[i], pp);
 
                 if (pp.getErrorIndex() != parsePosition2[i][0]) {
-                    errln("Case" + (i+1) +
+                    fail("Case" + (i+1) +
                           ": getErrorIndex() returns wrong value. expected:" +
                           parsePosition2[i][0] + ", got:"+ pp.getErrorIndex() +
                           " for " + from[i]);
                 }
                 if (pp.getIndex() != parsePosition2[i][1]) {
-                    errln("Case" + (i+1) +
+                    fail("Case" + (i+1) +
                           ": getIndex() returns wrong value. expected:" +
                           parsePosition2[i][1] + ", got:"+ pp.getIndex() +
                           " for " + from[i]);
                 }
             }
             catch(Exception e) {
-                errln("Unexpected exception: " + e.getMessage());
+                fail("Unexpected exception: " + e.getMessage());
             }
 
             if (parsePosition2[i][0] == -1) {
@@ -624,7 +639,8 @@ public class BigDecimalParse extends IntlTest {
     /**
      * Test for DecimalFormat: setParseIntegerOnly(true)
      */
-    void test_Parse_in_DecimalFormat_ParseIntegerOnly() {
+    @Test
+    public void test_Parse_in_DecimalFormat_ParseIntegerOnly() {
         DecimalFormat df = (DecimalFormat)NumberFormat.getIntegerInstance();
         df.setParseBigDecimal(true);
 
@@ -636,20 +652,20 @@ public class BigDecimalParse extends IntlTest {
                 parsed = df.parse(from3[i], pp);
 
                 if (pp.getErrorIndex() != parsePosition3[i][0]) {
-                    errln("Case" + (i+1) +
+                    fail("Case" + (i+1) +
                           ": getErrorIndex() returns wrong value. expected:" +
                           parsePosition3[i][0] + ", got:"+ pp.getErrorIndex() +
                           " for " + from3[i]);
                 }
                 if (pp.getIndex() != parsePosition3[i][1]) {
-                    errln("Case" + (i+1) +
+                    fail("Case" + (i+1) +
                           ": getIndex() returns wrong value. expected:" +
                           parsePosition3[i][1] + ", got:"+ pp.getIndex() +
                           " for " + from3[i]);
                 }
             }
             catch(Exception e) {
-                errln("Unexpected exception: " + e.getMessage());
+                fail("Unexpected exception: " + e.getMessage());
             }
 
             if (parsePosition3[i][0] == -1) {
@@ -667,7 +683,7 @@ public class BigDecimalParse extends IntlTest {
         }
         catch(Exception e) {
             exceptionOccurred = true;
-            errln(e.getMessage());
+            fail(e.getMessage());
         }
         if (!exceptionOccurred) {
             checkParse(from, to, parsed);
@@ -678,7 +694,7 @@ public class BigDecimalParse extends IntlTest {
 
     private void checkParse(String orig, Number expected, Number got) {
         if (!expected.equals(got)) {
-            errln("Parsing... failed." +
+            fail("Parsing... failed." +
                   "\n   original: " + orig +
                   "\n   parsed:   " + got +
                   "\n   expected: " + expected + "\n");
@@ -687,7 +703,7 @@ public class BigDecimalParse extends IntlTest {
 
     private void checkType(String orig, String expected, String got) {
         if (!expected.equals(got)) {
-            errln("Parsing... unexpected Class returned." +
+            fail("Parsing... unexpected Class returned." +
                   "\n   original: " + orig +
                   "\n   got:      " + got +
                   "\n   expected: " + expected + "\n");
@@ -696,7 +712,7 @@ public class BigDecimalParse extends IntlTest {
 
     private void checkParsePosition(String orig, int expected, int got) {
         if (expected != got) {
-            errln("Parsing... wrong ParsePosition returned." +
+            fail("Parsing... wrong ParsePosition returned." +
                   "\n   original: " + orig +
                   "\n   got:      " + got +
                   "\n   expected: " + expected + "\n");
