@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,7 +38,7 @@ import jdk.test.lib.jfr.Events;
 /**
  * @test
  * @summary Verifies that the recorded value descriptors are correct
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm  jdk.jfr.api.consumer.TestValueDescriptorRecorded
@@ -61,7 +61,7 @@ public class TestValueDescriptorRecorded {
 
             List<RecordedEvent> events = Events.fromRecording(r);
             Events.hasEvents(events);
-            RecordedEvent recordedEvent = events.get(0);
+            RecordedEvent recordedEvent = events.getFirst();
             for (ValueDescriptor desc : recordedEvent.getFields()) {
                 if ("myValue".equals(desc.getName())) {
                     Asserts.assertEquals(desc.getLabel(), "myLabel");
