@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -32,7 +32,7 @@ import jdk.test.lib.jfr.SimpleEvent;
 /**
  * @test
  * @summary Tests that a duration is recorded.
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.api.event.TestEventDuration
@@ -55,7 +55,7 @@ public class TestEventDuration {
 
             r.stop();
             List<RecordedEvent> events = Events.fromRecording(r);
-            if (events.get(0).getDuration().toNanos() < 1) {
+            if (events.getFirst().getDuration().toNanos() < 1) {
                 throw new AssertionError("Expected a duration");
             }
         }
