@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -40,7 +40,7 @@ import jdk.test.lib.jfr.VoidFunction;
 /**
  * @test
  * @summary Test setDestination to invalid paths
- * @key jfr
+ * @requires vm.flagless
  * @requires vm.hasJFR
  * @library /test/lib
  * @run main/othervm jdk.jfr.api.recording.destination.TestDestInvalid
@@ -92,7 +92,7 @@ public class TestDestInvalid {
         Asserts.assertTrue(Files.exists(dest), "No recording file: " + dest);
         List<RecordedEvent> events = RecordingFile.readAllEvents(dest);
         Asserts.assertFalse(events.isEmpty(), "No event found");
-        System.out.printf("Found event %s in %s%n", events.get(0).getEventType().getName(), dest.toString());
+        System.out.printf("Found event %s in %s%n", events.getFirst().getEventType().getName(), dest.toString());
     }
 
     private static void verifyException(VoidFunction f, String msg, Class<?> exceptionClass) throws Throwable {
