@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,7 +29,6 @@
  * @author Pasi Eronen
  * @modules jdk.crypto.cryptoki
  * @run main/othervm TestLeadingZeroesP11
- * @run main/othervm -Djava.security.manager=allow TestLeadingZeroesP11 sm
  */
 
 
