@@ -3,10 +3,10 @@
  * @bug 8231827
  * @summary Match which involves a cast conversion
  * @compile/fail/ref=CastConversionMatch.out -XDrawDiagnostics CastConversionMatch.java
- */
+ * @compile --enable-preview --source ${jdk.version} CastConversionMatch.java */
 
 public class CastConversionMatch {
-    public static void main(String [] args) {
+    public static void meth() {
         Object o = 42;
         if (o instanceof int s) {
             System.out.println("Okay");
