@@ -25,8 +25,6 @@
  * @test
  * @bug 8262891 8268663 8289894
  * @summary Check guards implementation.
- * @compile --enable-preview -source ${jdk.version} Guards.java
- * @run main/othervm --enable-preview Guards
  */
 
 import java.util.Objects;
@@ -49,7 +47,6 @@ public class Guards {
         runIfTrue(this::typeGuardAfterParenthesizedTrueSwitchStatement);
         runIfTrue(this::typeGuardAfterParenthesizedTrueSwitchExpression);
         runIfTrue(this::typeGuardAfterParenthesizedTrueIfStatement);
-        testGuardNPE();
     }
 
     void run(Function<Object, String> convert) {
@@ -57,6 +54,7 @@ public class Guards {
         assertEquals("one", convert.apply(1));
         assertEquals("other", convert.apply(-1));
         assertEquals("box with empty", convert.apply(new Box("")));
+        assertEquals("box with non-empty", convert.apply(new Box("a")));
         assertEquals("any", convert.apply(""));
     }
 
@@ -72,6 +70,7 @@ public class Guards {
             case Integer i when i == 1: return "one";
             case Integer i: return "other";
             case Box(String s) when s.isEmpty(): return "box with empty";
+            case Box(String s) : return "box with non-empty";
             case Object x: return "any";
         }
     }
@@ -82,6 +81,7 @@ public class Guards {
             case Integer i when i == 1 -> { yield "one"; }
             case Integer i -> "other";
             case Box(String s) when s.isEmpty() -> "box with empty";
+            case Box(String s) -> "box with non-empty";
             case Object x -> "any";
         };
     }
@@ -93,6 +93,7 @@ public class Guards {
             case Integer i when i == 1 -> { x = "one"; yield true; }
             case Integer i -> { x = "other"; yield true; }
             case Box(String s) when s.isEmpty() -> {x = "box with empty"; yield true; }
+            case Box(String s) -> {x = "box with non-empty"; yield true; }
             case Object other -> (x = "any") != null;
         }) {
             return x;
@@ -132,24 +133,24 @@ public class Guards {
 
     String typeGuardAfterParenthesizedTrueSwitchStatement(Object o) {
         switch (o) {
-            case (Integer i) when i == 0: o = String.valueOf(i); return "true";
-            case (Integer i) when i == 2: o = String.valueOf(i); return "second";
+            case Integer i when i == 0: o = String.valueOf(i); return "true";
+            case Integer i when i == 2: o = String.valueOf(i); return "second";
             case Object x: return "any";
         }
     }
 
     String typeGuardAfterParenthesizedTrueSwitchExpression(Object o) {
         return switch (o) {
-            case (Integer i) when i == 0: o = String.valueOf(i); yield "true";
-            case (Integer i) when i == 2: o = String.valueOf(i); yield "second";
+            case Integer i when i == 0: o = String.valueOf(i); yield "true";
+            case Integer i when i == 2: o = String.valueOf(i); yield "second";
             case Object x: yield "any";
         };
     }
 
     String typeGuardAfterParenthesizedTrueIfStatement(Object o) {
-        if (o != null && o instanceof (Integer i) && i == 0) {
+        if (o != null && o instanceof Integer i && i == 0) {
             return "true";
-        } else if (o != null && o instanceof (Integer i) && i == 2 && (o = i) != null) {
+        } else if (o != null && o instanceof Integer i && i == 2 && (o = i) != null) {
             return "second";
         } else {
             return "any";
@@ -161,34 +162,6 @@ public class Guards {
             return s;
         }
         return null;
-    }
-
-    void testGuardNPE() {
-        doTestGuardNPE(this::guardNPE1);
-        doTestGuardNPE(this::guardNPE2);
-    }
-
-    void doTestGuardNPE(Function<Object, String> test) {
-        assertEquals("empty", test.apply(""));
-        assertEquals("A", test.apply("A"));
-        assertEquals("other", test.apply(1));
-        assertEquals("empty", test.apply(null));
-    }
-
-    String guardNPE1(Object o) {
-        return switch (o) {
-            case null, String s when s.isEmpty() -> "empty";
-            case String s -> s;
-            case Object x -> "other";
-        };
-    }
-
-    String guardNPE2(Object o) {
-        return switch (o) {
-            case null, ((((String s)))) when s.isEmpty() -> "empty";
-            case ((((String s)))) -> s;
-            case Object x -> "other";
-        };
     }
 
     record Box(Object o) {}
